Input, Output y ViewChild

--- a/src/app/pages/graficas1/graficas1.component.html
+++ b/src/app/pages/graficas1/graficas1.component.html
@@ -1,1 +1,52 @@
-<p>graficas1 works!</p>
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+
+        <app-grafica-dona [title]="graficos.grafico1.leyenda" [doughnutChartLabels]="graficos.grafico1.labels"
+          [doughnutChartData]="graficos.grafico1.data" [doughnutChartType]="graficos.grafico1.type">
+        </app-grafica-dona>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-grafica-dona [title]="graficos.grafico2.leyenda" [doughnutChartLabels]="graficos.grafico2.labels"
+          [doughnutChartData]="graficos.grafico2.data" [doughnutChartType]="graficos.grafico2.type">
+        </app-grafica-dona>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-grafica-dona [title]="graficos.grafico3.leyenda" [doughnutChartLabels]="this.graficos.grafico3.labels"
+          [doughnutChartData]="this.graficos.grafico3.data" [doughnutChartType]="this.graficos.grafico3.type">
+        </app-grafica-dona>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-grafica-dona [title]="graficos.grafico4.leyenda" [doughnutChartLabels]="this.graficos.grafico4.labels"
+          [doughnutChartData]="this.graficos.grafico4.data" [doughnutChartType]="this.graficos.grafico4.type">
+        </app-grafica-dona>
+
+      </div>
+    </div>
+  </div>
+</div>
