--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -18,7 +18,7 @@
       <!-- Start Page Content -->
       <!-- ============================================================== -->
       <router-outlet></router-outlet>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-12">
           <div class="card">
             <div class="card-body">
@@ -26,7 +26,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- ============================================================== -->
       <!-- End PAge Content -->
       <!-- ============================================================== -->
