--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,51 @@
-<p>progress works!</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+
+        <h4 class="card-title">Barra de progreso</h4>
+
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
+            [attr.ariaValueNow]="this.progresoAzul" aria-valuemin="0" aria-valuemax="100"
+            [style.width]="this.progresoAzul + '%'">
+          </div>
+        </div>
+        <br>
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar"
+            [attr.ariaValueNow]="this.progresoVerde" aria-valuemin="0" aria-valuemax="100"
+            [style.width]="this.progresoVerde + '%'">
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
+
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-incrementador (cambioValor)="this.progresoAzul = $event" leyenda="Progress Azul"
+          [progreso]="this.progresoAzul"></app-incrementador>
+
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+
+        <app-incrementador (cambioValor)="this.progresoVerde = $event" leyenda="Progress Verde"
+          [progreso]="this.progresoVerde"></app-incrementador>
+
+      </div>
+    </div>
+  </div>
+
+</div>
